stderr
JudgeMan.java:13: error: ')' or ',' expected
        if(hand.equals(aa;)){
                         ^
JudgeMan.java:13: error: illegal start of expression
        if(hand.equals(aa;)){
                          ^
2 errors
